--- a/dia3/clases/post_api_rest/android/app/src/main/AndroidManifest.xml
+++ b/dia3/clases/post_api_rest/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.post_api_rest">
+    package="com.flutter.apipost">
    <application
-        android:label="post_api_rest"
+        android:label="POST API"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
